[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tower.gd" type="Script" id=1]
[ext_resource path="res://materials/spriteOverride.tres" type="Material" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 32, 32, 32 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 4, 4, 4 )

[node name="Tower" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
script = ExtResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.75
one_shot = true

[node name="AttackRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AttackRange"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 16, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
material_override = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_AttackRange_area_exited"]
